= Changelog

* Backend
  ** Send emails on successful reservations.

== `0.10.0.3`

* Frontend
  ** Add Terms and Conditions and Privacy Policy to footer.
  ** Improve responsiveness of reservation date/time picker.

== `0.10.0.2`

* Frontend
  ** Fix updating user information after automatic login after registration.

== `0.10.0.1`

* Frontend
  ** Add Terms and Conditions.
  ** Add Privacy Policy.

== `0.10.0.0`

* Frontend
  ** Desks can viewed in a top-down "Room" view.
    *** Clicking a desk will bring up a window to create a reservation.
  ** Desks can be edited to change their location in the room.
  ** Improve visibility of reservations on timetable.
* API
  ** Desks now have an optional position as metadata affecting some routes.
    *** `/desk/create`
    *** `/desk/edit`
    *** `/desk/list`
    *** `/reservation/list`
* Database
  ** Add optional location to `desk` table using multiple columns.
    *** `position_x`
    *** `position_y`
    *** `direction`
    *** `size_width`
    *** `size_depth`

== `0.9.1.1`

* Frontend
  ** Fix reservation time selection on touch.

== `0.9.1.0`

* Frontend
  ** Fix link in footer.
* Backend
  ** Add new environment variable `MENSAM_LOG_COLOR` for colorful log messages.

== `0.9.0.0`

* Updated dependencies.

== `0.8.3.1`

* Frontend
  ** Fix link in footer.

== `0.8.3.0`

* Frontend
  ** Use `touch-action` CSS property for proper touch support on mobile.

== `0.8.2.0`

* Frontend
  ** Use modern pointer events instead of mouse events for better mobile support.

== `0.8.1.0`

* Frontend
  ** Allow dragging to select a timespan for a reservation.

== `0.8.0.0`

* Frontend
  ** Profile pictures are displayed on profiles and can be edited in your settings.
* Database
  ** Add new column `picture_jpeg` to the `user` table.
* API
  ** Add `/picture` route to change your user profile picture.
    *** Use GET to download profile pictures.
    *** Use PUT to upload a new profile picture replacing your old one.